@@ -1,5 +1,5 @@
 3.13988 3.24021 5.1798 89.9994 90.0011 119.996
-3.13988 0 0
--1.61992 2.80621 0
-0.000 0.000 5.1798
-1.51986 2.80621 5.1798
+0.367049, 1.32538, 2.11683
+0.52, 0.434, 0.4545
+75.3606, 53.4723, -96.5913
+227.996, 421.083, -2591.5738
